--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.4",
+    "bootstrap": "^5.3.8",
     "pinia": "^3.0.3",
-    "vue": "^3.5.18",
+    "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
